@@ -209,24 +209,30 @@ server_identity: VAR_IDENTITY STRING
 server_nsid: VAR_NSID STRING
 	{ 
 		unsigned char* nsid = 0;
-		uint16_t nsid_len = 0;
+		size_t nsid_len = 0;
 
 		OUTYY(("P(server_nsid:%s)\n", $2));
 
 		if (strncasecmp($2, "ascii_", 6) == 0) {
 			nsid_len = strlen($2+6);
-			cfg_parser->opt->nsid = region_alloc(cfg_parser->opt->region, nsid_len*2+1);
-			hex_ntop((uint8_t*)$2+6, nsid_len, (char*)cfg_parser->opt->nsid, nsid_len*2+1);
+			if(nsid_len < 65535) {
+				cfg_parser->opt->nsid = region_alloc(cfg_parser->opt->region, nsid_len*2+1);
+				hex_ntop((uint8_t*)$2+6, nsid_len, (char*)cfg_parser->opt->nsid, nsid_len*2+1);
+			} else
+				yyerror("NSID too long");
 		} else if (strlen($2) % 2 != 0) {
 			yyerror("the NSID must be a hex string of an even length.");
 		} else {
 			nsid_len = strlen($2) / 2;
-			nsid = xalloc(nsid_len);
-			if (hex_pton($2, nsid, nsid_len) == -1)
-				yyerror("hex string cannot be parsed in NSID.");
-			else
-				cfg_parser->opt->nsid = region_strdup(cfg_parser->opt->region, $2);
-			free(nsid);
+			if(nsid_len < 65535) {
+				nsid = xalloc(nsid_len);
+				if (hex_pton($2, nsid, nsid_len) == -1)
+					yyerror("hex string cannot be parsed in NSID.");
+				else
+					cfg_parser->opt->nsid = region_strdup(cfg_parser->opt->region, $2);
+				free(nsid);
+			} else
+				yyerror("NSID too long");
 		}
 	}
 	;
