@@ -1190,7 +1190,7 @@ zadd_rdata_txt_clean_wireformat()
 	if(!rd || !rd->data)
 		return; /* previous syntax failure */
 	if ((tmp_data = (uint16_t *) region_alloc(parser->region, 
-		rd->data[0] + 2)) != NULL) {
+		((size_t)rd->data[0]) + ((size_t)2))) != NULL) {
 		memcpy(tmp_data, rd->data, rd->data[0] + 2);
 		/* rd->data of u16+65535 freed when rr_region is freed */
 		rd->data = tmp_data;
@@ -1448,11 +1448,15 @@ process_rr(void)
 		if (i < rrset->rr_count) {
 			return 0;
 		}
+		if(rrset->rr_count == 65535) {
+			zc_error_prev_line("too may RRs for domain RRset");
+			return 0;
+		}
 
 		/* Add it... */
 		o = rrset->rrs;
-		rrset->rrs = (rr_type *) region_alloc(parser->region,
-			(rrset->rr_count + 1) * sizeof(rr_type));
+		rrset->rrs = (rr_type *) region_alloc_array(parser->region,
+			(rrset->rr_count + 1), sizeof(rr_type));
 		memcpy(rrset->rrs, o, (rrset->rr_count) * sizeof(rr_type));
 		region_recycle(parser->region, o,
 			(rrset->rr_count) * sizeof(rr_type));
